<resources>
    <string name="app_name">Quest Manager</string>
    <string name="action_settings">Настройки</string>


    <string name="pref_key_language" translatable="false">pref_language</string>
    <string name="language">Язык</string>

    <string name="pref_key_theme" translatable="false">pref_theme</string>
    <string name="themePrefTitle">Ночная тема</string>


    <string name="registering_message">Регистрация</string>
    <string name="gcm_send_message">Отправлено</string>
    <string name="token_error_message">Ошибка</string>




    <string name="task_for_me">Мои задания</string>
    <string name="task_from_me">Мои поручения</string>
    <string name="base_cost" translatable="false">10</string>
    <string name="done">Готово</string>
    <string name="login_email_hint">Электронная почта</string>
    <string name="loginBtnText">Вход / Регистрация </string>
    <string name="actionSort">aa</string>
    <string name="selected_date">Дата:</string>

    <string name="waitConfirmActivity_text">Проверьте указанную вами почту</string>
    <string name="waitConfirmActivity_btn_text">Ввести другую почту</string>
    
    <string name="loginActivity_error_blank">Адрес электронной почты не может быть пустым</string>
    <string name="loginActivity_error_required">Заполните адрес электронной почты</string>
    <string name="loginActivity_error_invalid">Ошибка в адресе электронной почты</string>
    <string name="loginActivity_error_unknown">Неизвестная ошибка</string>
    <string name="networkError">Проблемы с сетью</string>
    <string name="menu_input">Полученные</string>
    <string name="menu_create_task">Создать задание</string>
    <string name="menu_output">Отправленные</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_logout">Выход</string>
    <string name="device">Устройство</string>
    <string name="cancel">Отмена</string>


    <string-array name="languageAlias" translatable="false">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string-array name="languages">
        <item>Английский</item>
        <item>Русский</item>
    </string-array>

    <string name="hint_title">Заголовок</string>
    <string name="hint_details">Подробности</string>
    <string name="hint_worker">Исполнитель (почта)</string>
    <string name="hint_cost">Стоимость (от 0 до 99)</string>
    <string name="hint_date">Крайний срок</string>
    <string name="create_task_btn">Отправить</string>
    <string name="task_cancel_btn">Отакзать в награде</string>
    <string name="task_done_btn">Выдать награду за задание</string>
    <string name="task_view_report_btn">Посмотреть отчет</string>
    <string name="hint_sender">Отправитель (почта)</string>

    <string name="header_report_for_task">Задание</string>
    <string name="send_report_btn">Отправить</string>
    <string name="refresh_started">Обновление начато</string>
    <string name="refresh_finished">Закончено</string>
    <string name="field_required">Обязательное поле</string>
    <string name="invalid_email">Неверный формат</string>
    <string name="no_such_user">Нет такого пользователя</string>
    <string name="not_enough">Не хватает баллов</string>


    <string name="empty_list_msg">Пока ничего нет</string>

</resources>
