<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:title="@string/menu_input"
            android:icon="@drawable/ic_inbox"
            />
        <item
            android:id="@+id/nav_second_fragment"
            android:title="@string/menu_create_task"
            android:icon="@drawable/ic_pencil"
            />
        <item
            android:id="@+id/nav_third_fragment"
            android:title="@string/menu_output"
            android:icon="@drawable/ic_outbox"
            />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings"
            />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout_variant"
            />
    </group>

</menu>